tests/error/type_errors/call_unexpected_arg.py
from tests.error.util import guppy


@guppy
def foo(x: int) -> int:
    return foo(x, x)
